--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,8 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Invoices</h1>
-
-<table>
+<div class="media">
+<div class="media-body">
+<table class ="table-hover">
   <thead>
     <tr>
       <th>Date</th>
@@ -27,6 +28,8 @@
     <% end %>
   </tbody>
 </table>
+</div>
+</div>
 
 <br>
 
